# python-client-generator

./: .commitlintrc.js  .flake8  .gitignore  .releaserc  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cicd.yml  publish.yml  test.yml
python_client_generator/: exceptions.py  generate_apis.py  generate_base_client.py  generate_models.py  generate_pyproject.py  main.py  utils.py
python_client_generator/templates/: apis.py.mustache  base_client.py.mustache  models.py.mustache  pyproject.toml.mustache
tests/: conftest.py  input_app.py  test_fastapi_client.py  test_fastapi_client_generator.py  test_generator.py  test_input_app_generator.py  test_input_file_generator.py  test_swagger_file_generator.py  test_utils.py  utils.py
tests/expected/: apis.py  base_client.py  models.py  pyproject.toml
tests/expected/fastapi_app_client/: apis.py  base_client.py  models.py  pyproject.toml
tests/expected/swagger_petstore_client/: base_client.py  models.py  pyproject.toml
tests/expected/swagger_petstore_client/test_project/: __init__.py  apis.py  models.py
tests/inputs/: fastapi_app.py  swagger-petstore.json
tests/test_inputs/: README.md
